<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_patient_panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.e_medapp.patientPanel">

    <TextView
        android:text="@string/patient_my_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:id="@+id/tvPatientMyDetails" />

    <TextView
        android:text="@string/patient_my_appointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:id="@+id/tvPatientMyAppointment"
        android:layout_below="@+id/tvPatientMyDetails"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/patient_view_appointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/tvPatientViewAppointment"
        android:layout_below="@+id/tvPatientMyAppointment"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="Logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:id="@+id/PatientLogoutButton"
        android:layout_below="@+id/tvPatientViewAppointment"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false" />

    <TextView
        android:text="View Doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/tvPatientViewDoctor"
        android:layout_below="@+id/tvPatientViewAppointment"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="Submit Feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/tvPatientSubmitFeedback"
        android:layout_below="@+id/tvPatientViewDoctor"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
